@@ -1,0 +1,2 @@
+SelectionCuts: EleOLR
+EleOLR: TRUE
